--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       --accent-yellow:#ffd36b;
       --green1:#40d39a;
       --green2:#27b36f;
-      --outline-strong: rgba(120,100,180,0.16);
-      --outline-subtle: rgba(120,100,180,0.10);
+      --outline-strong: rgba(120,100,180,0.28); /* darker */
+      --outline-subtle: rgba(120,100,180,0.16);  /* darker subtle */
       --radius-lg:28px;
       --radius-md:12px;
       --shadow-strong: 0 22px 56px rgba(30,20,80,0.08);
       --shadow-soft: 0 10px 30px rgba(30,20,80,0.05);
-      --max-upload-h:260px;
-      --content-width:420px;
+      --max-upload-h:280px; /* allow larger preview */
+      --content-width:440px; /* a bit wider left column */
     }
     *{box-sizing:border-box}
     body{
@@ -42,22 +42,21 @@
       box-shadow:var(--shadow-strong);
       border:1px solid rgba(0,0,0,0.02);
       position:relative;
-      /* visible outer rounded outline on top of card (like sample) */
     }
-    /* outline ring like sample above card */
+    /* stronger outline ring on card */
     .card::before{
       content:'';
       position:absolute;
       inset:6px;
       border-radius:calc(var(--radius-lg) - 6px);
-      border:2px solid rgba(200,190,220,0.25);
+      border:3px solid rgba(160,150,200,0.28); /* darker visible ring */
       pointer-events:none;
     }
 
     /* Brand */
     .brand{text-align:center;margin-bottom:8px}
     .brand h1{
-      font-size:42px;
+      font-size:38px;
       margin:6px 0 4px 0;
       line-height:1;
       font-weight:900;
@@ -68,52 +67,51 @@
     }
     .brand p{margin:0;color:#6b6b77;font-size:13px}
 
-    /* inner panel (content box) with subtle outer outline line */
+    /* inner panel with slightly stronger outline */
     .inner{
       background: linear-gradient(180deg,#fff,#fbfbff);
       border-radius:14px;
       padding:16px;
       margin-top:6px;
       border:1px solid var(--outline-subtle);
-      box-shadow: 0 8px 22px rgba(120,100,180,0.02);
+      box-shadow: 0 8px 22px rgba(120,100,180,0.03);
       position:relative;
     }
-    /* inner outline ring like example for boxes */
     .inner::before{
       content:'';
       position:absolute;
       inset:-10px;
       border-radius:20px;
-      border:2px solid rgba(200,190,220,0.18);
+      border:2px solid rgba(160,150,200,0.18);
       pointer-events:none;
     }
 
-    /* upload box: outer border + dashed inner outline (matches screenshot style) */
+    /* Upload box: outer border + dashed inner outline, now darker */
     .upload{
       position:relative;
       border-radius:12px;
       padding:20px;
-      min-height:260px;
+      min-height:280px;
       display:flex;
       align-items:center;
       justify-content:center;
       background:#fff;
       overflow:hidden;
-      border:2px solid rgba(200,190,220,0.20); /* visible outer outline */
+      border:3px solid var(--outline-strong); /* darker outer border */
     }
     .upload::after{
       content:'';
       position:absolute;
       inset:14px;
       border-radius:10px;
-      border:2px dashed var(--outline-subtle); /* dashed inner outline */
+      border:2px dashed var(--outline-subtle); /* inner dashed */
       pointer-events:none;
     }
     .upload input{display:none}
     .placeholder{color:#98a0b3;text-align:center;font-size:15px;z-index:2}
     .upload img{max-width:100%;max-height:var(--max-upload-h);border-radius:10px;object-fit:contain;z-index:2}
 
-    /* Buttons - slim, consistent */
+    /* Buttons - clean slim look */
     .btn{
       display:inline-block;
       padding:10px 20px;
@@ -135,7 +133,7 @@
     .btn:before{content:'';position:absolute;left:-40%;top:-60%;width:90%;height:220%;transform:rotate(25deg);opacity:0.22;background:linear-gradient(90deg,rgba(255,255,255,0.95),rgba(255,255,255,0.12));transition:all .6s ease}
     .btn:hover:before{left:120%;opacity:0.6}
 
-    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 28px;border-radius:18px;}
+    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 32px;border-radius:18px;}
     .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);min-width:170px;border-radius:14px;}
     .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffcf5a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 12px 34px rgba(255,170,60,0.10)}
     .btn-download{
@@ -144,9 +142,9 @@
       border-radius:18px;
       display:block;
       margin:16px auto 0;
-      min-width:190px;
-      box-shadow: 0 14px 40px rgba(40,150,110,0.12);
-      border:2px solid rgba(0,0,0,0.04);
+      min-width:200px;
+      box-shadow: 0 16px 44px rgba(40,150,110,0.14);
+      border:2px solid rgba(0,0,0,0.05);
       color:#fff;
       font-weight:900;
       position:relative;
@@ -156,7 +154,7 @@
       position:absolute;
       left:6px;right:6px;top:6px;
       height:36%;
-      background: linear-gradient(180deg, rgba(255,255,255,0.5), rgba(255,255,255,0));
+      background: linear-gradient(180deg, rgba(255,255,255,0.55), rgba(255,255,255,0));
       border-radius:14px 14px 0 0;
       pointer-events:none;
       mix-blend-mode:overlay;
@@ -166,40 +164,40 @@
     .controls{display:flex;gap:12px;margin-top:14px;align-items:center}
     .field{flex:1}
     select,input{
-      padding:10px;border-radius:10px;border:1px solid rgba(120,100,180,0.06);background:#fff;width:100%;font-size:14px;
+      padding:10px;border-radius:10px;border:1px solid rgba(120,100,180,0.08);background:#fff;width:100%;font-size:14px;
     }
 
-    /* actions layout */
+    /* actions */
     .actions{display:flex;gap:12px;margin-top:14px;align-items:center;justify-content:space-between}
     .actions .left{flex:1}
     .download-row{text-align:center;margin-top:12px}
 
-    /* footer: trials placed under buttons */
+    /* footer */
     .footer{margin-top:12px;display:flex;flex-direction:column;gap:10px}
     .trials-wrap{display:flex;align-items:center;gap:12px;justify-content:flex-start}
-    .trials-oval{background:rgba(122,91,255,0.07);padding:8px 12px;border-radius:999px;font-weight:800;color:var(--accent1);font-size:13px;box-shadow:0 6px 16px rgba(122,91,255,0.04)}
-    .progress-wrap{width:220px;height:10px;background:#f4f4f8;border-radius:999px;overflow:hidden;border:1px solid rgba(0,0,0,0.03)}
+    .trials-oval{background:rgba(122,91,255,0.08);padding:8px 12px;border-radius:999px;font-weight:800;color:var(--accent1);font-size:13px;box-shadow:0 6px 16px rgba(122,91,255,0.05)}
+    .progress-wrap{width:220px;height:10px;background:#f4f4f8;border-radius:999px;overflow:hidden;border:1px solid rgba(0,0,0,0.04)}
     .progress-bar{height:100%;background:linear-gradient(90deg,#2ecc71,#27b36f);width:100%;transition:width .3s}
 
     .status-pill{margin-top:8px;background:#0b0b0b;color:#fff;padding:12px;border-radius:12px;font-weight:700;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
 
-    /* RESULT PANEL: larger, centered, outer & inner outlines like sample */
+    /* RESULT PANEL: larger, darker outlines, centered content */
     .result-frame{
       width:100%;
       height:calc(100vh - 56px);
-      border-radius:28px;
-      padding:28px;
+      border-radius:36px;
+      padding:30px;
       background:linear-gradient(180deg,#fff,#fbfbff);
       box-shadow:var(--shadow-soft);
-      border:2px solid rgba(200,190,220,0.28); /* visible outer outline like screenshot */
+      border:3px solid rgba(160,150,200,0.34); /* much more visible outer outline */
       display:flex;
       align-items:center;
       justify-content:center;
     }
     .result-inner{
-      width:92%;
-      height:92%;
-      border-radius:18px;
+      width:96%;
+      height:94%;
+      border-radius:20px;
       padding:18px;
       background:#fff;
       display:flex;
@@ -207,19 +205,19 @@
       justify-content:center;
       position:relative;
     }
-    /* inner faint rounded line inside result area (like example) */
+    /* inner faint rounded line */
     .result-inner::before{
       content:'';
       position:absolute;
       inset:12px;
       border-radius:14px;
-      border:2px solid var(--outline-subtle);
+      border:2px solid rgba(120,100,180,0.16);
       pointer-events:none;
     }
-    .result-note{color:#98a0b3;font-size:18px;text-align:center;align-self:center;z-index:2}
-    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 20px 48px rgba(30,20,80,0.06);z-index:2}
+    .result-note{color:#98a0b3;font-size:20px;text-align:center;align-self:center;z-index:2}
+    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 22px 56px rgba(30,20,80,0.08);z-index:2}
 
-    /* responsive tweaks */
+    /* responsive */
     @media (max-width:980px){
       .app{flex-direction:column;padding:18px;height:auto}
       .left{width:100%}
@@ -392,6 +390,7 @@
       // simulate server processing (replace with real fetch)
       await new Promise(r=>setTimeout(r,1500));
 
+      // demo: reuse uploaded image as processed result
       if (processedBlobUrl && processedBlobUrl !== uploadedBlobUrl) URL.revokeObjectURL(processedBlobUrl);
       processedBlobUrl = uploadedBlobUrl;
       resultPreview.src = processedBlobUrl;
