Refactor styles and update upload file size limit
Updated various CSS variables and styles for layout, buttons, and result panels. Increased maximum file upload size from 5MB to 8MB.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       --accent-yellow:#ffd36b;
       --green1:#40d39a;
       --green2:#27b36f;
-      --outline-strong: rgba(120,100,180,0.28); /* darker */
-      --outline-subtle: rgba(120,100,180,0.16);  /* darker subtle */
-      --radius-lg:28px;
+      --outline-strong: rgba(120,100,180,0.32);
+      --outline-subtle: rgba(120,100,180,0.18);
+      --radius-lg:36px;
       --radius-md:12px;
-      --shadow-strong: 0 22px 56px rgba(30,20,80,0.08);
-      --shadow-soft: 0 10px 30px rgba(30,20,80,0.05);
-      --max-upload-h:280px; /* allow larger preview */
-      --content-width:440px; /* a bit wider left column */
+      --shadow-strong: 0 28px 72px rgba(30,20,80,0.10);
+      --shadow-soft: 0 12px 36px rgba(30,20,80,0.06);
+      --max-upload-h:300px;
+      --content-width:460px;
     }
     *{box-sizing:border-box}
     body{
@@ -32,198 +32,164 @@
       -webkit-font-smoothing:antialiased;
     }
 
-    /* overall layout */
-    .app{display:flex;gap:28px;padding:28px;height:100vh;align-items:flex-start;justify-content:flex-start}
-    .left{width:var(--content-width)}
+    /* Layout */
+    .app{display:flex;gap:28px;padding:20px 28px;height:100vh;align-items:flex-start;justify-content:flex-start}
+    .left{width:var(--content-width); flex:0 0 var(--content-width)}
+    .right{flex:1; display:flex; align-items:center; justify-content:center; min-width:0} /* allow shrinking/growing */
+
+    /* Card with outer visible ring */
     .card{
       background:var(--panel);
       border-radius:var(--radius-lg);
-      padding:20px;
+      padding:18px;
       box-shadow:var(--shadow-strong);
-      border:1px solid rgba(0,0,0,0.02);
       position:relative;
+      border:1px solid rgba(0,0,0,0.02);
+      min-height:calc(100vh - 56px);
     }
-    /* stronger outline ring on card */
     .card::before{
       content:'';
       position:absolute;
       inset:6px;
       border-radius:calc(var(--radius-lg) - 6px);
-      border:3px solid rgba(160,150,200,0.28); /* darker visible ring */
+      border:3px solid rgba(170,160,200,0.30);
       pointer-events:none;
     }
 
     /* Brand */
     .brand{text-align:center;margin-bottom:8px}
     .brand h1{
-      font-size:38px;
+      font-size:36px;
       margin:6px 0 4px 0;
       line-height:1;
       font-weight:900;
       color:transparent;
       background:linear-gradient(90deg,#ff8bd1,#9b6bff,#6aa3ff);
       -webkit-background-clip:text;background-clip:text;
-      letter-spacing:0.6px;
     }
     .brand p{margin:0;color:#6b6b77;font-size:13px}
 
-    /* inner panel with slightly stronger outline */
+    /* inner panel */
     .inner{
       background: linear-gradient(180deg,#fff,#fbfbff);
-      border-radius:14px;
-      padding:16px;
+      border-radius:16px;
+      padding:14px;
       margin-top:6px;
       border:1px solid var(--outline-subtle);
-      box-shadow: 0 8px 22px rgba(120,100,180,0.03);
+      box-shadow: 0 10px 28px rgba(120,100,180,0.03);
       position:relative;
+      min-height:calc(100vh - 150px);
     }
     .inner::before{
       content:'';
       position:absolute;
       inset:-10px;
       border-radius:20px;
-      border:2px solid rgba(160,150,200,0.18);
+      border:2px solid rgba(170,160,200,0.20);
       pointer-events:none;
     }
 
-    /* Upload box: outer border + dashed inner outline, now darker */
+    /* upload box */
     .upload{
       position:relative;
       border-radius:12px;
       padding:20px;
-      min-height:280px;
+      min-height:300px;
       display:flex;
       align-items:center;
       justify-content:center;
       background:#fff;
       overflow:hidden;
-      border:3px solid var(--outline-strong); /* darker outer border */
+      border:3px solid var(--outline-strong);
     }
     .upload::after{
       content:'';
       position:absolute;
-      inset:14px;
+      inset:16px;
       border-radius:10px;
-      border:2px dashed var(--outline-subtle); /* inner dashed */
+      border:2px dashed var(--outline-subtle);
       pointer-events:none;
     }
     .upload input{display:none}
     .placeholder{color:#98a0b3;text-align:center;font-size:15px;z-index:2}
     .upload img{max-width:100%;max-height:var(--max-upload-h);border-radius:10px;object-fit:contain;z-index:2}
 
-    /* Buttons - clean slim look */
-    .btn{
-      display:inline-block;
-      padding:10px 20px;
-      border-radius:14px;
-      border:none;
-      cursor:pointer;
-      font-weight:800;
-      position:relative;
-      overflow:hidden;
-      transition:transform .12s ease,box-shadow .12s ease,opacity .12s;
-      font-size:15px;
-      color:#fff;
-      box-shadow:0 10px 28px rgba(30,20,80,0.06);
-      min-width:140px;
-      text-align:center;
-      white-space:nowrap;
-    }
-    .btn:active{transform:translateY(1px)}
-    .btn:before{content:'';position:absolute;left:-40%;top:-60%;width:90%;height:220%;transform:rotate(25deg);opacity:0.22;background:linear-gradient(90deg,rgba(255,255,255,0.95),rgba(255,255,255,0.12));transition:all .6s ease}
-    .btn:hover:before{left:120%;opacity:0.6}
-
-    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 32px;border-radius:18px;}
-    .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);min-width:170px;border-radius:14px;}
-    .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffcf5a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 12px 34px rgba(255,170,60,0.10)}
-    .btn-download{
-      background: linear-gradient(180deg,var(--green1),var(--green2));
-      padding:10px 36px;
-      border-radius:18px;
-      display:block;
-      margin:16px auto 0;
-      min-width:200px;
-      box-shadow: 0 16px 44px rgba(40,150,110,0.14);
-      border:2px solid rgba(0,0,0,0.05);
-      color:#fff;
-      font-weight:900;
-      position:relative;
-    }
-    .btn-download:after{
-      content:'';
-      position:absolute;
-      left:6px;right:6px;top:6px;
-      height:36%;
-      background: linear-gradient(180deg, rgba(255,255,255,0.55), rgba(255,255,255,0));
-      border-radius:14px 14px 0 0;
-      pointer-events:none;
-      mix-blend-mode:overlay;
-    }
-
-    /* controls */
+    /* Controls */
     .controls{display:flex;gap:12px;margin-top:14px;align-items:center}
     .field{flex:1}
-    select,input{
-      padding:10px;border-radius:10px;border:1px solid rgba(120,100,180,0.08);background:#fff;width:100%;font-size:14px;
-    }
+    select,input{padding:10px;border-radius:10px;border:1px solid rgba(120,100,180,0.08);background:#fff;width:100%;font-size:14px}
 
-    /* actions */
-    .actions{display:flex;gap:12px;margin-top:14px;align-items:center;justify-content:space-between}
+    /* Buttons - slim professional */
+    .btn{display:inline-block;padding:10px 20px;border-radius:14px;border:none;cursor:pointer;font-weight:800;position:relative;overflow:hidden;transition:transform .12s ease,box-shadow .12s ease;font-size:15px;color:#fff;box-shadow:0 10px 28px rgba(30,20,80,0.06);min-width:140px;text-align:center;white-space:nowrap}
+    .btn:active{transform:translateY(1px)}
+    .btn:before{content:'';position:absolute;left:-40%;top:-60%;width:90%;height:220%;transform:rotate(25deg);opacity:0.22;background:linear-gradient(90deg,rgba(255,255,255,0.95),rgba(255,255,255,0.12));transition:all .6s ease}
+    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 30px;border-radius:18px}
+    .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);min-width:170px;border-radius:14px}
+    .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffcf5a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 12px 34px rgba(255,170,60,0.10)}
+    .btn-download{background: linear-gradient(180deg,var(--green1),var(--green2));padding:10px 36px;border-radius:18px;display:block;margin:16px auto 0;min-width:220px;box-shadow:0 18px 48px rgba(40,150,110,0.16);border:2px solid rgba(0,0,0,0.05);color:#fff;font-weight:900;position:relative}
+    .btn-download:after{content:'';position:absolute;left:8px;right:8px;top:8px;height:34%;background:linear-gradient(180deg, rgba(255,255,255,0.55), rgba(255,255,255,0));border-radius:14px 14px 0 0;pointer-events:none;mix-blend-mode:overlay}
+
+    /* actions layout */
+    .actions{display:flex;gap:12px;margin-top:16px;align-items:center;justify-content:space-between}
     .actions .left{flex:1}
     .download-row{text-align:center;margin-top:12px}
 
-    /* footer */
-    .footer{margin-top:12px;display:flex;flex-direction:column;gap:10px}
+    /* footer (trials & status) */
+    .footer{margin-top:14px;display:flex;flex-direction:column;gap:10px}
     .trials-wrap{display:flex;align-items:center;gap:12px;justify-content:flex-start}
     .trials-oval{background:rgba(122,91,255,0.08);padding:8px 12px;border-radius:999px;font-weight:800;color:var(--accent1);font-size:13px;box-shadow:0 6px 16px rgba(122,91,255,0.05)}
-    .progress-wrap{width:220px;height:10px;background:#f4f4f8;border-radius:999px;overflow:hidden;border:1px solid rgba(0,0,0,0.04)}
+    .progress-wrap{width:240px;height:10px;background:#f4f4f8;border-radius:999px;overflow:hidden;border:1px solid rgba(0,0,0,0.04)}
     .progress-bar{height:100%;background:linear-gradient(90deg,#2ecc71,#27b36f);width:100%;transition:width .3s}
 
     .status-pill{margin-top:8px;background:#0b0b0b;color:#fff;padding:12px;border-radius:12px;font-weight:700;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
 
-    /* RESULT PANEL: larger, darker outlines, centered content */
+    /* RESULT PANEL - made larger and perfectly centered, with darker outlines */
     .result-frame{
       width:100%;
-      height:calc(100vh - 56px);
-      border-radius:36px;
-      padding:30px;
+      height:calc(100vh - 40px); /* use more vertical space */
+      border-radius:40px;
+      padding:10px;              /* small padding so inner area is large */
       background:linear-gradient(180deg,#fff,#fbfbff);
       box-shadow:var(--shadow-soft);
-      border:3px solid rgba(160,150,200,0.34); /* much more visible outer outline */
+      border:4px solid rgba(160,150,200,0.42); /* darker visible outer border */
       display:flex;
       align-items:center;
       justify-content:center;
     }
+    /* result-inner now fills almost entire frame (98% x 98%) */
     .result-inner{
-      width:96%;
-      height:94%;
+      width:98%;
+      height:98%;
       border-radius:20px;
-      padding:18px;
+      padding:10px;
       background:#fff;
       display:flex;
       align-items:center;
       justify-content:center;
       position:relative;
     }
-    /* inner faint rounded line */
     .result-inner::before{
       content:'';
       position:absolute;
-      inset:12px;
-      border-radius:14px;
-      border:2px solid rgba(120,100,180,0.16);
+      inset:10px;
+      border-radius:16px;
+      border:2px dashed var(--outline-subtle);
       pointer-events:none;
     }
-    .result-note{color:#98a0b3;font-size:20px;text-align:center;align-self:center;z-index:2}
-    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 22px 56px rgba(30,20,80,0.08);z-index:2}
+    .result-note{color:#98a0b3;font-size:18px;text-align:center;z-index:2}
+    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:6px;display:none;box-shadow:0 28px 72px rgba(30,20,80,0.10);z-index:2}
 
-    /* responsive */
+    /* responsive adjustments */
+    @media (max-width:1200px){
+      .left{width:420px; flex:0 0 420px}
+      .result-frame{height:calc(100vh - 60px)}
+    }
     @media (max-width:980px){
-      .app{flex-direction:column;padding:18px;height:auto}
-      .left{width:100%}
-      .result-frame{height:420px;padding:16px}
+      .app{flex-direction:column;padding:16px;height:auto}
+      .left{width:100%;flex:0 0 auto}
+      .result-frame{height:420px;padding:12px}
       .result-inner{width:96%;height:84%}
-      .brand h1{font-size:34px}
+      .brand h1{font-size:32px}
     }
   </style>
 </head>
@@ -296,7 +262,7 @@
     </div>
 
     <div class="right">
-      <div class="result-frame">
+      <div class="result-frame" role="region" aria-label="Result preview">
         <div class="result-inner">
           <div id="resultNote" class="result-note">Result will appear here after background removal.</div>
           <img id="resultPreview" class="result-img" src="" alt="result" />
@@ -306,10 +272,8 @@
   </div>
 
   <script>
-    // service worker registration (optional)
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('/service-worker.js').catch(()=>{/* ignore */});
 
-    // elements
     const fileInput = document.getElementById('fileInput');
     const dropArea = document.getElementById('dropArea');
     const uploadContent = document.getElementById('uploadContent');
@@ -323,10 +287,8 @@
     const trialsCountEl = document.getElementById('trialsCount');
     const trialsBar = document.getElementById('trialsBar');
 
-    // single-click: upload button opens file dialog; label handles box click automatically
     uploadBtn.addEventListener('click', ()=> fileInput.click());
 
-    // drag/drop
     dropArea.addEventListener('dragover', e=>{ e.preventDefault(); dropArea.classList.add('hover'); });
     dropArea.addEventListener('dragleave', e=>{ e.preventDefault(); dropArea.classList.remove('hover'); });
     dropArea.addEventListener('drop', e=>{ e.preventDefault(); dropArea.classList.remove('hover'); if(e.dataTransfer.files.length) handleFile(e.dataTransfer.files[0]); });
@@ -357,7 +319,7 @@
       const img = document.createElement('img');
       img.src = url;
       img.alt = 'uploaded';
-      img.style.maxHeight = '260px';
+      img.style.maxHeight = '280px';
       uploadContent.appendChild(img);
     }
 
@@ -369,8 +331,8 @@
 
     function handleFile(file){
       if(!file.type.startsWith('image/')) { alert('Please select an image'); return; }
-      const maxBytes = 5 * 1024 * 1024; // 5 MB
-      if (file.size > maxBytes) { alert('File too large. Maximum 5 MB allowed.'); return; }
+      const maxBytes = 8 * 1024 * 1024; // 8 MB allowed now
+      if (file.size > maxBytes) { alert('File too large. Maximum 8 MB allowed.'); return; }
       if (uploadedBlobUrl) URL.revokeObjectURL(uploadedBlobUrl);
       uploadedBlobUrl = URL.createObjectURL(file);
       showUploadImage(uploadedBlobUrl);
@@ -379,7 +341,6 @@
       setStatus('Image ready');
     }
 
-    // Remove background (demo)
     removeBtn.addEventListener('click', async ()=>{
       if(!uploadedBlobUrl){ alert('Please upload an image first.'); return; }
       if(trials <= 0){ alert('No trials left. Please subscribe.'); return; }
@@ -387,10 +348,8 @@
       removeBtn.disabled = true;
       resultNote.style.display = 'none';
 
-      // simulate server processing (replace with real fetch)
       await new Promise(r=>setTimeout(r,1500));
 
-      // demo: reuse uploaded image as processed result
       if (processedBlobUrl && processedBlobUrl !== uploadedBlobUrl) URL.revokeObjectURL(processedBlobUrl);
       processedBlobUrl = uploadedBlobUrl;
       resultPreview.src = processedBlobUrl;
@@ -404,7 +363,6 @@
       removeBtn.disabled = false;
     });
 
-    // download
     downloadBtn.addEventListener('click', ()=>{
       if(!resultPreview.src) return;
       const a = document.createElement('a');
@@ -413,12 +371,12 @@
       a.click();
     });
 
-    // subscribe demo
     subscribeBtn.addEventListener('click', ()=> { alert('Subscribe flow (demo).'); });
 
     // init
     updateTrialsUI();
     window.addEventListener('beforeunload', ()=>{ if (uploadedBlobUrl) URL.revokeObjectURL(uploadedBlobUrl); });
+
   </script>
 </body>
 </html>
