Update manifest link and add theme color meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>MagicCutBG</title>
-  <link rel="manifest" href="/manifest.json" />
+
+  <!-- paste these two lines here (replace old manifest line) -->
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#7c4dff" />
+
   <style>
     :root{
       --bg:#fbf8ff;
